--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.sdsmdg.harjot:rotatingtext:1.0.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
