--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".HomeActivity" android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".QuizActivity"/>
         <activity android:name=".ScoreBoardActivity"/>
+        <activity android:name=".SettingsActivity"/>
 
     </application>
 
